Fixing issue with perf test